# MoodSwarm-LLM

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Learning Guide  PROGRESS.md  README.md  Walkthrough  docker-compose.yml  instructionsclaude.md  pyproject.toml  ruff.toml
.github/workflows/: cd.yml  ci.yml
configs/: digital_data_etl.yaml  evaluating.yaml  feature_engineering.yaml  generate_instruct_datasets.yaml  generate_preference_datasets.yaml  training.yaml
docs/: RUNBOOK.md  architecture.md  data_save_flow.html  development.md  finetuning_architecture.md  future_source_attribution.md  sagemaker_training_report.md  week6_part1_preference_dataset.md  week6_part2_dpo_training.md  week7_inference_deployment.md  week8_mlops.md
frontend/: app.json  package-lock.json  package.json
frontend/app/: _layout.tsx  index.tsx
frontend/app/chat/: [id].tsx
frontend/components/: ChatBubble.tsx  ChatInput.tsx  ConversationItem.tsx  ConversationList.tsx  EmptyState.tsx  RenameModal.tsx
frontend/constants/: theme.ts
frontend/lib/: api.ts  types.ts
interview/: INTERVIEW_QUESTIONS.md
llm_engineering/: __init__.py  settings.py
llm_engineering/application/crawlers/: __init__.py  base.py  custom_article.py  dispatcher.py  github.py  medium.py
llm_engineering/application/dataset/: constants.py  generation.py  output_parsers.py  utils.py
llm_engineering/application/networks/: base.py  embeddings.py
llm_engineering/application/preprocessing/: chunking_data_handlers.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
llm_engineering/application/preprocessing/operations/: __init__.py  chunking.py
llm_engineering/application/rag/: prompt_templates.py  query_expansion.py  retriever.py  self_query.py
llm_engineering/application/utils/: __init__.py
llm_engineering/domain/: __init__.py  conversations.py  dataset.py  prompt.py  queries.py
llm_engineering/domain/base/: __init__.py  nosql.py  vector.py
llm_engineering/infrastructure/: inference_pipeline_api.py  opik_utils.py
llm_engineering/infrastructure/aws/deploy/: config.py  delete_endpoint.py  run.py  sagemaker_huggingface.py
llm_engineering/infrastructure/db/: mongo.py
llm_engineering/model/: utils.py
llm_engineering/model/evaluation/: __init__.py  evaluate.py  requirements.txt  sagemaker.py
llm_engineering/model/finetuning/: __init__.py  finetune.py  requirements.txt  sagemaker_launcher.py
llm_engineering/model/inference/: inference.py  run.py
pipelines/: evaluating.py  feature_engineering.py  generate_datasets.py  smoke_test.py  training.py
steps/etl/: crawl_links.py  get_or_create_user.py
steps/evaluating/: evaluate.py
steps/feature_engineering/: load_to_vector_db.py  query_data_warehouse.py
steps/generate_datasets/: __init__.py  create_prompts.py  generate_instruction_dataset.py  generate_preference_dataset.py  push_to_huggingface.py  query_feature_store.py
steps/training/: train.py
tests/: conftest.py
tests/integration/: test_api_schema.py
tests/unit/: test_chunking.py  test_domain_models.py  test_inference_executor.py  test_settings.py
tools/: __main__.py  chunk_analysis.py  data_warehouse.py  dataset_inspect.py  deploy_endpoint.py  model_compare.py  push_dataset.py  qdrant_inspect.py  rag.py  rag_eval.py  rag_tuning.py  run.py  search_test.py  sft_report.py
