[tool.poetry]
name = "llm-engineering"
version = "0.1.0"
description = "MoodSwarm - LLM Twin engineering project"
authors = ["arkaj"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
zenml = { version = "0.74.0", extras = ["server"] }
pymongo = "^4.6.2"
click = "^8.0.1"
loguru = "^0.7.2"
rich = "^13.7.1"
pydantic-settings = "^2.0.0"
poethepoet = "0.29.0"
qdrant-client = "^1.8.0"

# Digital data ETL (Week 2)
selenium = "^4.21.0"
webdriver-manager = "^4.0.1"
beautifulsoup4 = "^4.12.3"
html2text = "^2024.2.26"
chromedriver-autoinstaller = "^0.6.4"
tqdm = "^4.66.0"

# RAG / LangChain (used by CustomArticleCrawler)
langchain-community = "^0.2.11"
tenacity = ">=8.1.0,<8.4.0 || >8.4.0,<9.0.0"

# RAG Feature Pipeline (Week 3)
torch = ">=2.0.0,<2.3.0"
sentence-transformers = "^3.0.0"
langchain-text-splitters = "^0.2.0"
numpy = "^1.26.0"
transformers = "^4.40.0"

# RAG Retrieval (Week 4)
langchain-openai = "^0.1.3"
opik = "^0.2.2"

# SFT Dataset Generation & Training (Week 5)
tiktoken = "^0.12.0"
datasets = "^4.6.1"
scikit-learn = "^1.8.0"
huggingface-hub = ">=0.20.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
pre-commit = "^3.7.1"
pytest = "^8.2.2"


[tool.poetry.group.aws.dependencies]
sagemaker = "<3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
# Infrastructure
local-docker-up = "docker compose up -d"
local-docker-down = "docker compose down"

# Smoke test
run-smoke-test = "poetry run python -m tools.run --run-smoke-test --no-cache"

# ETL pipelines
run-digital-data-etl = "poetry run python -m tools.run --run-etl --no-cache --etl-config-filename digital_data_etl.yaml"

# Data warehouse
export-data-warehouse = "poetry run python -m tools.data_warehouse --export-raw-data"
import-data-warehouse = "poetry run python -m tools.data_warehouse --import-raw-data"

# Feature engineering (Week 3)
run-feature-engineering = "poetry run python -m tools.run --run-feature-engineering --no-cache"

# Dataset generation (Week 5)
run-generate-instruct-datasets = "poetry run python -m tools.run --run-generate-instruct-datasets --no-cache"
run-generate-preference-datasets = "poetry run python -m tools.run --run-generate-preference-datasets --no-cache"

# Training & Evaluation (Week 5)
run-training = "poetry run python -m tools.run --run-training --no-cache"
run-evaluation = "poetry run python -m tools.run --run-evaluation --no-cache"
sft-report = "poetry run python -m tools.sft_report"
push-dataset = "poetry run python -m tools.push_dataset"

# CI/CD tasks (Week 8)
lint-check = "poetry run ruff check ."
lint-fix = "poetry run ruff check . --fix"
format-check = "poetry run ruff format --check ."
format-fix = "poetry run ruff format ."
test = { cmd = "poetry run pytest tests/", env = { OPIK_TRACK_DISABLE = "true" } }

# Inference & deployment (Week 7-8)
deploy-endpoint = "poetry run python -m tools.deploy_endpoint create"
delete-endpoint = "poetry run python -m tools.deploy_endpoint delete"
endpoint-status = "poetry run python -m tools.deploy_endpoint status"
start-api = "poetry run python -m tools.ml_service"

[tool.pytest.ini_options]
testpaths = ["tests"]
